# visage

./: .gitignore  CMakeLists.txt
cmake/: compile_flags.cmake
examples/: CMakeLists.txt
examples/BringYourOwnWindow/: bring_your_own_window.cpp
examples/LiveShaderEditing/: live_shader_editing.cpp
examples/shaders/: fs_glitch.glsl  fs_gray_scale.glsl  fs_overlay.glsl  fs_sepia.glsl  fs_shader_quad.glsl  fs_warp.glsl  vs_custom.glsl  vs_overlay.glsl  vs_shader_quad.glsl
visage_app/: application_editor.cpp  application_window.cpp  application_window.h
visage_graphics/: CMakeLists.txt  canvas.cpp  canvas.h  embedded.cmake  graphics_caches.cpp  graphics_caches.h  graphics_utils.cpp  graphics_utils.h  image.cpp  layer.h  renderer.cpp  renderer.h  screenshot.cpp
visage_graphics/gl/: bgfx_gl.cpp  gl_api.cpp  gl_api.h
visage_graphics/gl/include/bgfx/: bgfx.h
visage_graphics/shaders/: fs_blur.glsl  fs_blur_sample.glsl  fs_circle.glsl  fs_clear.glsl  fs_color.glsl  fs_diamond.glsl  fs_flat_arc.glsl  fs_flat_segment.glsl  fs_graph_fill.glsl  fs_graph_line.glsl  fs_heat_map.glsl  fs_mult.glsl  fs_mult_threshold.glsl  fs_path_fill.glsl  fs_post_effect.glsl  fs_quadratic_bezier.glsl  fs_rectangle.glsl  fs_rounded_arc.glsl  fs_rounded_rectangle.glsl  fs_rounded_segment.glsl  fs_sample.glsl  fs_sample_path.glsl  fs_small_blur.glsl  fs_split_threshold.glsl  fs_squircle.glsl  fs_tinted_texture.glsl  fs_triangle.glsl  shader_utils.glsl  vs_arc.glsl  vs_clear.glsl  vs_color.glsl  vs_complex_shape.glsl  vs_conservative_path_fill.glsl  vs_full_screen_texture.glsl  vs_path_fill.glsl  vs_sample.glsl  vs_sample_path.glsl  vs_shape.glsl  vs_tinted_texture.glsl
visage_graphics/tests/: gl_test_context.cpp
visage_utils/: space.cpp  space.h
visage_utils/win32/: defines.cpp
visage_widgets/: shader_editor.cpp  shader_editor.h
visage_windowing/: CMakeLists.txt  windowing.h
visage_windowing/sdl3/: windowing_sdl3.cpp  windowing_sdl3.h
